The constructor of NumberFormatSymbols creates defensive copies of all collections. Making NumberFormatSymbols effectively immutable.