@@ -9,8 +9,6 @@ import java.text.DecimalFormatSymbols;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
@@ -33,142 +31,6 @@ public record NumberFormatSymbols(Set<Character> decimalSeparator, Set<Character
                                   Set<String> infinity, Set<String> nan, List<Character> digits) {
 
     /**
-     * Creates a new instance with the specified decimal separator symbols.
-     *
-     * @param newValue the decimal separator symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withDecimalSeparator(Set<Character> newValue) {
-        return new NumberFormatSymbols(newValue,
-                groupingSeparator,
-                exponentSeparator,
-                minusSign,
-                plusSign,
-                infinity,
-                nan,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified grouping separator symbols.
-     *
-     * @param newValue the grouping separator symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withGroupingSeparator(Set<Character> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                newValue,
-                exponentSeparator,
-                minusSign,
-                plusSign,
-                infinity,
-                nan,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified exponent separator symbols.
-     *
-     * @param newValue the exponent separator symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withExponentSeparator(Set<String> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                groupingSeparator,
-                newValue,
-                minusSign,
-                plusSign,
-                infinity,
-                nan,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified minus sign symbols.
-     *
-     * @param newValue the minus sign symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withMinusSign(Set<Character> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                groupingSeparator,
-                exponentSeparator,
-                newValue,
-                plusSign,
-                infinity,
-                nan,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified plus sign symbols.
-     *
-     * @param newValue the plus sign symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withPlusSign(Set<Character> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                groupingSeparator,
-                exponentSeparator,
-                minusSign,
-                newValue,
-                infinity,
-                nan,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified infinity symbols.
-     *
-     * @param newValue the infinity symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withInfinity(Set<String> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                groupingSeparator,
-                exponentSeparator,
-                minusSign,
-                plusSign,
-                newValue,
-                nan,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified NaN symbols.
-     *
-     * @param newValue the NaN symbols
-     * @return a new instance
-     */
-    public NumberFormatSymbols withNaN(Set<String> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                groupingSeparator,
-                exponentSeparator,
-                minusSign,
-                plusSign,
-                infinity,
-                newValue,
-                digits);
-    }
-
-    /**
-     * Creates a new instance with the specified digits.
-     *
-     * @param newValue the digits
-     * @return a new instance
-     */
-    public NumberFormatSymbols withDigits(List<Character> newValue) {
-        return new NumberFormatSymbols(decimalSeparator,
-                groupingSeparator,
-                exponentSeparator,
-                minusSign,
-                plusSign,
-                infinity,
-                nan,
-                newValue);
-    }
-
-    /**
      * Canonical constructor.
      *
      * @param decimalSeparator  each character in this string defines a decimal separator
@@ -183,14 +45,14 @@ public record NumberFormatSymbols(Set<Character> decimalSeparator, Set<Character
     public NumberFormatSymbols(Set<Character> decimalSeparator, Set<Character> groupingSeparator, Set<String> exponentSeparator, Set<Character> minusSign, Set<Character> plusSign, Set<String> infinity, Set<String> nan, List<Character> digits) {
         if (Objects.requireNonNull(digits, "digits").size() != 10)
             throw new IllegalArgumentException("digits list must have size 10");
-        this.decimalSeparator = Objects.requireNonNull(decimalSeparator, "decimalSeparator");
-        this.groupingSeparator = Objects.requireNonNull(groupingSeparator, "groupingSeparator");
-        this.exponentSeparator = Objects.requireNonNull(exponentSeparator, "exponentSeparator");
-        this.minusSign = Objects.requireNonNull(minusSign, "minusSign");
-        this.plusSign = Objects.requireNonNull(plusSign, "plusSign");
-        this.infinity = Objects.requireNonNull(infinity, "infinity");
-        this.nan = Objects.requireNonNull(nan, "nan");
-        this.digits = digits;
+        this.decimalSeparator = Set.copyOf(Objects.requireNonNull(decimalSeparator, "decimalSeparator"));
+        this.groupingSeparator = Set.copyOf(Objects.requireNonNull(groupingSeparator, "groupingSeparator"));
+        this.exponentSeparator = Set.copyOf(Objects.requireNonNull(exponentSeparator, "exponentSeparator"));
+        this.minusSign = Set.copyOf(Objects.requireNonNull(minusSign, "minusSign"));
+        this.plusSign = Set.copyOf(Objects.requireNonNull(plusSign, "plusSign"));
+        this.infinity = Set.copyOf(Objects.requireNonNull(infinity, "infinity"));
+        this.nan = Set.copyOf(Objects.requireNonNull(nan, "nan"));
+        this.digits = List.copyOf(digits);
     }
 
     /**
@@ -230,22 +92,6 @@ public record NumberFormatSymbols(Set<Character> decimalSeparator, Set<Character
         return buf.toString();
     }
 
-    private static Set<Character> toSet(String chars) {
-        Set<Character> set = new LinkedHashSet<>(chars.length() * 2);
-        for (char ch : chars.toCharArray()) {
-            set.add(ch);
-        }
-        return set;
-    }
-
-    private static List<Character> toList(String chars) {
-        List<Character> list = new ArrayList<>(10);
-        for (char ch : chars.toCharArray()) {
-            list.add(ch);
-        }
-        return list;
-    }
-
     /**
      * Creates a new instance from the provided {@link DecimalFormatSymbols}.
      *
@@ -260,19 +106,19 @@ public record NumberFormatSymbols(Set<Character> decimalSeparator, Set<Character
             digits.add((char) (zeroDigit + i));
         }
         return new NumberFormatSymbols(
-                Collections.singleton(symbols.getDecimalSeparator()),
-                Collections.singleton(symbols.getGroupingSeparator()),
-                Collections.singleton(symbols.getExponentSeparator()),
-                Collections.singleton(symbols.getMinusSign()),
-                Collections.emptySet(),
-                Collections.singleton(symbols.getInfinity()),
-                Collections.singleton(symbols.getNaN()),
+                Set.of(symbols.getDecimalSeparator()),
+                Set.of(symbols.getGroupingSeparator()),
+                Set.of(symbols.getExponentSeparator()),
+                Set.of(symbols.getMinusSign()),
+                Set.of(),
+                Set.of(symbols.getInfinity()),
+                Set.of(symbols.getNaN()),
                 digits
         );
     }
 
     /**
-     * Creates a new instance with default symbols.
+     * Creates a new instance with the following default symbols.
      * <dl>
      *     <dt>decimalSeparator </dt><dd>{@code .}</dd>
      *     <dt>groupingSeparator</dt><dd>none</dd>
@@ -288,14 +134,166 @@ public record NumberFormatSymbols(Set<Character> decimalSeparator, Set<Character
      */
     public static NumberFormatSymbols fromDefault() {
         return new NumberFormatSymbols(
-                Collections.singleton('.'),
-                Collections.emptySet(),
-                new HashSet<>(Arrays.asList("e", "E")),
-                Collections.singleton('-'),
-                Collections.singleton('+'),
-                Collections.singleton("Infinity"),
-                Collections.singleton("NaN"),
+                Set.of('.'),
+                Set.of(),
+                Set.of("e", "E"),
+                Set.of('-'),
+                Set.of('+'),
+                Set.of("Infinity"),
+                Set.of("NaN"),
                 Arrays.asList('0', '1', '2', '3', '4', '5', '6', '7', '8', '9')
         );
+    }
+
+    private static List<Character> toList(String chars) {
+        List<Character> list = new ArrayList<>(10);
+        for (char ch : chars.toCharArray()) {
+            list.add(ch);
+        }
+        return list;
+    }
+
+    private static Set<Character> toSet(String chars) {
+        Set<Character> set = new LinkedHashSet<>(chars.length() * 2);
+        for (char ch : chars.toCharArray()) {
+            set.add(ch);
+        }
+        return set;
+    }
+
+    /**
+     * Creates a new instance with the specified decimal separator symbols.
+     *
+     * @param newValue the decimal separator symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withDecimalSeparator(Set<Character> newValue) {
+        return new NumberFormatSymbols(newValue,
+                groupingSeparator,
+                exponentSeparator,
+                minusSign,
+                plusSign,
+                infinity,
+                nan,
+                digits);
+    }
+
+    /**
+     * Creates a new instance with the specified digits.
+     *
+     * @param newValue the digits
+     * @return a new instance
+     */
+    public NumberFormatSymbols withDigits(List<Character> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                groupingSeparator,
+                exponentSeparator,
+                minusSign,
+                plusSign,
+                infinity,
+                nan,
+                newValue);
+    }
+
+    /**
+     * Creates a new instance with the specified exponent separator symbols.
+     *
+     * @param newValue the exponent separator symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withExponentSeparator(Set<String> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                groupingSeparator,
+                newValue,
+                minusSign,
+                plusSign,
+                infinity,
+                nan,
+                digits);
+    }
+
+    /**
+     * Creates a new instance with the specified grouping separator symbols.
+     *
+     * @param newValue the grouping separator symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withGroupingSeparator(Set<Character> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                newValue,
+                exponentSeparator,
+                minusSign,
+                plusSign,
+                infinity,
+                nan,
+                digits);
+    }
+
+    /**
+     * Creates a new instance with the specified infinity symbols.
+     *
+     * @param newValue the infinity symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withInfinity(Set<String> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                groupingSeparator,
+                exponentSeparator,
+                minusSign,
+                plusSign,
+                newValue,
+                nan,
+                digits);
+    }
+
+    /**
+     * Creates a new instance with the specified minus sign symbols.
+     *
+     * @param newValue the minus sign symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withMinusSign(Set<Character> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                groupingSeparator,
+                exponentSeparator,
+                newValue,
+                plusSign,
+                infinity,
+                nan,
+                digits);
+    }
+
+    /**
+     * Creates a new instance with the specified NaN symbols.
+     *
+     * @param newValue the NaN symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withNaN(Set<String> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                groupingSeparator,
+                exponentSeparator,
+                minusSign,
+                plusSign,
+                infinity,
+                newValue,
+                digits);
+    }
+
+    /**
+     * Creates a new instance with the specified plus sign symbols.
+     *
+     * @param newValue the plus sign symbols
+     * @return a new instance
+     */
+    public NumberFormatSymbols withPlusSign(Set<Character> newValue) {
+        return new NumberFormatSymbols(decimalSeparator,
+                groupingSeparator,
+                exponentSeparator,
+                minusSign,
+                newValue,
+                infinity,
+                nan,
+                digits);
     }
 }
